Added a Ubuntu and NVM DevContainer config - Refactor Dockerfile to use Ubuntu 20.04 base image and update installation steps for improved compatibility

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,42 @@
-FROM node:12
+# Set the base image to Ubuntu
+FROM Ubuntu 20.04
 
-RUN apk add --update --no-cache git ca-certificates openssl openssh
+
+# Set environment variables
+ENV TIMEZONE=America/Santo_Domingo
+ENV DEBIAN_FRONTEND=noninteractive
+ENV USER screeps
+ENV HOME /data/screeps
+
+################## BEGIN INSTALLATION ######################
+
+# Update and install prerequisites
+RUN apt update \
+ && apt upgrade -y \
+ && apt install -y --no-install-recommends \
+    apt-transport-https \
+    build-essential \
+    ca-certificates \
+    curl \
+    dirmngr \
+    g++ \
+    gcc \
+    git \
+    tcl \
+    make \
+    lsb-release \
+ && apt clean
+
+# Install NodeJS
+RUN curl -sL https://deb.nodesource.com/setup_10.x | bash \
+ && apt update \
+ && apt install -y nodejs \
+ && apt clean
+
+# Create Screeps user
+RUN adduser --disabled-password --gecos "" --home $HOME $USER
+
+# Set working directory
+WORKDIR $HOME
 RUN npm install -g rollup
+
