--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "watch-main": "rollup -cw --environment DEST:main",
     "watch-pserver": "rollup -cw --environment DEST:pserver",
     "watch-season": "rollup -cw --environment DEST:season",
-    "watch-sim": "rollup -cw --environment DEST:sim"
+    "watch-sim": "rollup -cw --environment DEST:sim",
+    "sync:dlocal": "rsync -avz ./dist/ /mnt/c/Users/Dileisa/AppData/Local/Screeps/scripts/127_0_0_1___21025/default/",
+    "sync:flocal": "rsync -avz ./dist/ /mnt/c/Users/owner/AppData/Local/Screeps/scripts/127_0_0_1___21025/default/"
   },
   "repository": {
     "type": "git",
@@ -60,6 +62,7 @@
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-screeps": "^1.0.1",
     "rollup-plugin-typescript2": "^0.31.0",
+    "rsync": "^0.6.1",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
     "ts-node": "^10.2.0",
